feat: create product will create category automatically
