# docs/swagger.json
@@ -185,12 +185,27 @@
         "controllers.ProductInput": {
             "type": "object",
             "required": [
+                "categories",
+                "count",
                 "name",
+                "price",
                 "store_id"
             ],
             "properties": {
+                "categories": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "count": {
+                    "type": "integer"
+                },
                 "name": {
                     "type": "string"
+                },
+                "price": {
+                    "type": "integer"
                 },
                 "store_id": {
                     "type": "integer"
